--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -45,6 +45,8 @@ ENV PATH                                ${JAVA_HOME}/bin:${PATH}
 RUN apt-get update && \
     apt-get install -y apt-utils vim curl nano wget unzip maven git
 
+RUN apt-get install -y libsm6 libxext6
+
 #java
 RUN wget https://build.funtoo.org/distfiles/oracle-java/jdk-8u152-linux-x64.tar.gz && \
     gunzip jdk-8u152-linux-x64.tar.gz && \
